--- a/css/css.css
+++ b/css/css.css
@@ -3,21 +3,7 @@
 @import url(var.css);
 @import url(global_blocks.css);
 @import url(../blocks/header/header.css);
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@import url(../blocks/poster/poster.css);
 
 
 
