--- a/blocks/poster/poster.css
+++ b/blocks/poster/poster.css
@@ -1,12 +1,360 @@
+.poster {
+    position: relative;
+    min-height: 823px;
+    display: flex;
+    flex-direction: column;
+}
+
+.poster:after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-image: url("img/background_man.png");
+    background-position: right 30px bottom;
+    background-repeat: no-repeat;
+    background-size: 675px 762px;
+    z-index: 1;
+}
+
 .poster__title {
     font-size: 150px;
     line-height: 1;
     font-weight: 900;
     letter-spacing: -15px;
+    text-transform: uppercase;
 }
 
 .poster__subtitle {
     font-size: 28px;
     line-height: 50px;
     padding: 0 0 0 100px;
+    margin: 0 0 30px;
+}
+
+.poster__info {
+    display: flex;
+    gap: 40px;
+    align-items: flex-end;
+    margin: 0 0 150px;
+    z-index: 2;
+}
+
+.poster__info-element {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.poster__info-features {
+    font-weight: 900;
+    color: #CD06FF;
+}
+
+.poster__info-features_field_number {
+    font-size: 100px;
+    line-height: 141px;
+}
+
+
+.poster__info-features_field_text {
+    font-variant: all-small-caps;
+    font-size: 75px;
+    line-height: 106px;
+}
+
+.poster__info-desc {
+    font-size: 30px;
+    line-height: 34px;
+    max-width: 209px;
+}
+
+.poster__link {
+    display: block;
+    position: relative;
+    background-color: var(--input-violet);
+    color: var(--white);
+    padding: 25px 69px;
+    max-width: 374px;
+    text-transform: uppercase;
+    font-size: 26px;
+    line-height: 30px;
+    font-weight: 700;
+    border: none;
+    border-radius: 10px;
+    z-index: 2;
+    transition-duration: 0.6s;
+}
+
+.poster__link::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--input-violet);
+    filter: blur(10px);
+    z-index: -1;
+}
+
+.poster__link:hover,
+.poster__link:focus {
+    background-color: var(--button-poster);
+    outline: none;
+    transition: background 0.4s linear;
+}
+
+.poster__link:active {
+    background-color: var(--button-violet);
+    transition: background 0.4s linear;
+}
+
+.poster__down {
+    position: absolute;
+    left: 50%;
+    bottom: 90px;
+    transform: translateX(-50%);
+    width: 97px;
+    height: 97px;
+    z-index: 2;
+    transition-duration: 1.3s;
+}
+
+.poster__down:hover circle {
+    fill: var(--white);
+    stroke: none;
+    transition: fill 0.7s ease-in-out;
+}
+
+.poster__down:hover rect {
+    fill: var(--input-violet);
+    transition: fill 0.5s ease-in-out;
+}
+
+.poster__down:focus {
+    outline: 1px solid var(--link-violet);
+    transition: outline 0.4s linear;
+}
+
+.poster__down:active circle {
+    fill: var(--link-violet);
+    stroke: none;
+}
+
+.poster__down:active rect {
+    fill: var(--white);
+}
+
+@media (max-width: 1120px) {
+    .poster {
+        min-height: 583px;
+    }
+
+    .poster__title {
+        font-size: 128px;
+        letter-spacing: -12px;
+        margin: 0 0 20px;
+    }
+
+    .poster:after {
+        background-size: 453px 520px;
+    }
+
+    .poster__info {
+        margin: 0 0 50px;
+    }
+
+    .poster__info-features_field_number {
+        font-size: 80px;
+        line-height: normal;
+    }
+
+    .poster__info-features_field_text {
+        font-size: 60px;
+        line-height: normal;
+    }
+
+    .poster__info-desc {
+        font-size: 26px;
+        line-height: normal;
+    }
+
+    .poster__link {
+        padding: 17px 48px;
+        max-width: 296px;
+        font-size: 22px;
+    }
+
+    .poster__down {
+        bottom: 46px;
+        width: 68px;
+        height: 68px;
+    }
+}
+
+@media (max-width: 880px) {
+    .poster {
+        min-height: 537px;
+    }
+
+    .poster:after {
+        background-size: 409px 479px;
+    }
+
+    .poster__title {
+        font-size: 89px;
+        letter-spacing: -0.1em;
+    }
+
+    .poster__subtitle {
+        font-size: 18px;
+        line-height: 24px;
+        margin: 0 0 50px;
+    }
+
+    .poster__info {
+        gap: 32px;
+        margin: 0 0 100px;
+    }
+
+    .poster__info-features_field_number {
+        font-size: 50px;
+    }
+
+    .poster__info-features_field_text {
+        font-size: 40px;
+    }
+
+    .poster__info-desc {
+        font-size: 16px;
+        max-width: 105px;
+    }
+
+    .poster__link {
+        padding: 11px 35px;
+        max-width: 214px;
+        font-size: 16px;
+    }
+
+    .poster__down {
+        display: none;
+    }
+}
+
+@media (max-width: 670px) {
+    .poster {
+        min-height: 404px;
+    }
+
+    .poster:after {
+        background-position: right 15px bottom;
+        background-size: 332px 389px;
+    }
+
+    .poster__info {
+        margin: 0 0 80px;
+        gap: 18px;
+    }
+
+    .poster__title {
+        font-size: 66px;
+        margin: 0 0 10px;
+    }
+
+    .poster__subtitle {
+        padding: 0 0 0 30px;
+        margin: 0 0 30px;
+    }
+
+    .poster__link {
+        padding: 11px 15px;
+        max-width: 170px;
+        line-height: 1;
+    }
+}
+
+@media (max-width: 481px) {
+    .poster {
+        min-height: 380px;
+    }
+    .poster:after {
+        background-size: 250px 339px;
+    }
+    .poster__title {
+        font-size: 55px;
+        line-height: 1;
+        letter-spacing: -2.2px;
+        margin: 0 0 6px;
+    }
+    .poster__subtitle {
+        font-size: 14px;
+        padding: 0 0 0 20px;
+    }
+    .poster__info-features_field_number {
+        font-size: 30px;
+    }
+
+    .poster__info-features_field_text {
+        font-size: 26px;
+    }
+}
+
+@media (max-width: 405px) {
+    .poster__title {
+        font-size: 45px;
+    }
+    .poster__info {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
+@media (max-width: 321px) {
+    .poster {
+        min-height: 204px;
+    }
+
+    .poster:after {
+        background-size: 161px 179px;
+    }
+
+    .poster__title {
+        font-size: 35px;
+        line-height: 1;
+        letter-spacing: -2.2px;
+        margin: 0 0 6px;
+    }
+
+    .poster__subtitle {
+        font-size: 10px;
+        line-height: 14px;
+        padding: 0 0 0 20px;
+        margin: 0 0 10px;
+    }
+
+    .poster__info {
+        gap: 20px;
+        margin: 0 0 30px;
+        flex-direction: row;
+    }
+
+    .poster__info-features_field_number {
+        font-size: 26px;
+    }
+
+    .poster__info-features_field_text {
+        font-size: 22px;
+    }
+
+    .poster__info-desc {
+        font-size: 10px;
+        max-width: 65px;
+    }
+
+    .poster__link {
+        padding: 7px 13px;
+        max-width: 117px;
+        font-size: 10px;
+        line-height: 1.2;
+    }
 }
