--- a/css/css.css
+++ b/css/css.css
@@ -4,6 +4,7 @@
 @import url(global_blocks.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/poster/poster.css);
+@import url(../blocks/service/service.css);
 
 
 
