--- a/css/global.css
+++ b/css/global.css
@@ -73,6 +73,7 @@ html {
     max-width: 1240px;
     padding: 0 30px;
     margin: 0 auto;
+    border: 1px solid red;
   }
 
   @media (max-width: 670px) {
