--- a/css/css.css
+++ b/css/css.css
@@ -5,7 +5,4 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/poster/poster.css);
 @import url(../blocks/service/service.css);
-
-
-
-@import url(media.css);
+@import url(../blocks/room/room.css);
