--- a/css/global_blocks.css
+++ b/css/global_blocks.css
@@ -5,7 +5,47 @@
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
-  margin: 0 0 50px;
+  margin: 0 0 40px;
+}
+
+@media (max-width: 1025px) {
+  .headline {
+    font-size: 30px;
+    line-height: 40px;
+    margin: 0 0 35px;
+  }
+}
+
+@media (max-width: 769px) {
+  .headline {
+    font-size: 24px;
+    line-height: 36px;
+    margin: 0 0 30px;
+  }
+}
+
+@media (max-width: 769px) {
+  .headline {
+    font-size: 24px;
+    line-height: 36px;
+    margin: 0 0 30px;
+  }
+}
+
+@media (max-width: 577px) {
+  .headline {
+    font-size: 16px;
+    line-height: 24px;
+    margin: 0 0 20px;
+  }
+}
+
+@media (max-width: 321px) {
+  .headline {
+    font-size: 14px;
+    line-height: 18px;
+    margin: 0 0 15px;
+  }
 }
 
 /* Блок логотипа */
