--- a/css/css.css
+++ b/css/css.css
@@ -6,3 +6,4 @@
 @import url(../blocks/poster/poster.css);
 @import url(../blocks/service/service.css);
 @import url(../blocks/room/room.css);
+@import url(../blocks/about/about.css);
