--- a/css/css.css
+++ b/css/css.css
@@ -7,3 +7,4 @@
 @import url(../blocks/service/service.css);
 @import url(../blocks/room/room.css);
 @import url(../blocks/about/about.css);
+@import url(../blocks/feedback/feedback.css)
