--- a/css/css.css
+++ b/css/css.css
@@ -9,3 +9,4 @@
 @import url(../blocks/about/about.css);
 @import url(../blocks/feedback/feedback.css);
 @import url(../blocks/faq/faq.css);
+@import url(../blocks/footer/footer.css);
