--- a/css/css.css
+++ b/css/css.css
@@ -6,6 +6,7 @@
 @import url(../blocks/poster/poster.css);
 @import url(../blocks/service/service.css);
 @import url(../blocks/room/room.css);
+@import url(../blocks/room/room_page.css);
 @import url(../blocks/booking/booking.css);
 @import url(../blocks/about/about.css);
 @import url(../blocks/feedback/feedback.css);
