--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    padding: 0 0 18px;
+    padding: 50px 0 18px;
     background: linear-gradient(180deg, #1B1A1B 0%, #370A37 100%);
 }
 
@@ -139,6 +139,9 @@
 }
 
 @media (max-width: 1100px) {
+    .footer {
+        padding-top: 35px;
+    }
     .footer__wrapper {
         margin: 0 0 92px;
     }
@@ -157,6 +160,9 @@
 }
 
 @media (max-width: 951px) {
+    .footer {
+        padding-top: 40px;
+    }
     .footer__wrapper {
         display: flex;
         flex-direction: column;
@@ -184,6 +190,9 @@
 }
 
 @media (max-width: 577px) {
+    .footer {
+        padding: 15px 0 24px;
+    }
     .contact__info {
         font-size: 18px;
         line-height: 24px;
