--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,5 @@
 .header {
     padding: 30px 0 0;
-    margin: 0 0 58px;
 }
 
 .header__inner {
@@ -19,19 +18,33 @@
     font-weight: 700;
     line-height: 30px;
     text-transform: uppercase;
+    transition-duration: 1.2s;
+}
+
+.header__callback:hover,
+.header__callback:focus {
+    background-color: var(--input-violet);
+    border: 3px solid transparent;
+    outline: none;
+    transition: background 0.8s ease-out;
+}
+
+.header__callback:active {
+    background-color: var(--button-violet);
+    outline: 1px solid var(--black);
 }
 
 /* Меню бургер для мобильных устройств */
 
 
-.mobile-nav__icon {
+.mobile-icon {
     display: none;
     width: 54px;
 	height: 29px;
 }
 
 @media (max-width: 880px) {
-    .mobile-nav__icon {
+    .mobile-icon {
         display: block;
     }
 }
@@ -57,6 +70,9 @@
 }
 
 @media (max-width: 577px) {
+    .header {
+        padding: 20px 0 0;
+    }
     .header__callback {
         display: none;
     }
