--- a/css/global_blocks.css
+++ b/css/global_blocks.css
@@ -1,3 +1,17 @@
+/* Общий контейнер для всего */
+
+.container {
+  max-width: 1240px;
+  padding: 0 30px;
+  margin: 0 auto;
+}
+
+@media (max-width: 670px) {
+  .container {
+    padding: 0 15px;
+  }
+}
+
 /* Общий класс для всех заголовков h2 */
 .headline {
   font-size: 40px;
@@ -43,7 +57,7 @@
 @media (max-width: 321px) {
   .headline {
     font-size: 14px;
-    line-height: 18px;
+    line-height: 20px;
     margin: 0 0 15px;
   }
 }
@@ -73,6 +87,21 @@
   text-transform: uppercase;
 }
 
+.nav__link {
+  transition-duration: 0.6s;
+}
+
+.nav__link:hover {
+  color: var(--link-violet);
+  transition: color 0.3s ease-out;
+}
+
+.nav__link:focus,
+.nav__link:active {
+  color: var(--focus-nav);
+  transition: color 0.6s ease-out;
+}
+
 @media (max-width: 1120px) {
   .nav__list {
     gap: 20px;
@@ -81,5 +110,31 @@
   .nav__item {
     font-size: 18px;
     line-height: 22px;
+  }
+}
+
+
+
+/* Задаем отступы для секций */
+
+.content {
+  padding: 50px 0;
+}
+
+@media (max-width: 1025px) {
+  .content {
+    padding: 35px 0;
+  }
+}
+
+@media (max-width: 769px) {
+  .content {
+    padding: 30px 0;
+  }
+}
+
+@media (max-width: 577px) {
+  .content {
+    padding: 15px 0;
   }
 }
