--- a/css/var.css
+++ b/css/var.css
@@ -7,7 +7,8 @@
     --button-violet: #640aa3; /* Фиолетовый, применяется в кнопках */
     --button-poster: #be47e4; /* Фиолетовый для кнопки в блоке постера, чтобы сильно не сливалось все*/
     --link-violet: #cd06ff; /* Фиолетовый, применяется в ссылках и кнопках */
-    --bg-light: #eadeed; /* Светлый фон */
+    --bg-light: #c2a7c8; /* Светлый фон */
     --color-faq-odd: #1c1a1a; /* Цвет текста в блоке FAQ*/
+    --faq-hover: #808080; /* Цвет наведения в блоке FAQ */
     --focus-nav: #828282; /* Фокус в верхней навигации */
 }
